Minor fixes on the product page - alignments, font sizes, etc.

--- a/skin/frontend/mango/default/scss/Pages/Product/_product.scss
+++ b/skin/frontend/mango/default/scss/Pages/Product/_product.scss
@@ -87,7 +87,7 @@
 			display: inline-block;
 			vertical-align: middle;
 			font-size: 1.25em;
-			width:55%;	
+			width:65%;	
 
 			p{
 				padding-right:40px;
@@ -97,7 +97,10 @@
 
 		.old-price{
 			font-size: 0.75em;
-			vertical-align: middle;				
+			vertical-align: middle;		
+			span{
+				text-decoration: line-through;	
+			}	
 		}
 
 		.special-price{
@@ -110,7 +113,7 @@
 
 		.qty-control-wrapper{
 			display: inline-block;
-			width:40%;
+			width:30%;
 			.qty-control{
 				vertical-align: top;
 				padding:1% 2% 3%;
@@ -299,7 +302,6 @@
 		}
 	}
 
-	.product-view{
 
 		#image-box-wrapper{
 
@@ -314,13 +316,11 @@
 				}
 			}
 		}
-	}
-
+#product-info-wrapper{
 	.price-qty-wrapper{
-			.price-box, .price-box{
+			.price-box, .qty-control-wrapper{
 				display: block;
-				width:60%;
-				float:left;
+				width:100%;
 				padding:10px 0px;		
 			}
 
@@ -334,6 +334,8 @@
 		padding-left:0;
 	}
 }
+}
+
 // ----- PRODUCT - MOBILE -----
 @include breakpoint($smartphone-breakpoint){
 	.product-view{
@@ -365,60 +367,71 @@
 		}
 	}
 
-#price-qty-wrapper{
-	.old-price{
-		font-size: 0.75em;
-		margin:0px 5px 0px 0px;
+	#price-qty-wrapper{
+		.old-price{
+			font-size: 0.75em;
+			margin:0px 5px 0px 0px;
+		}
 	}
-}
 
-.block-related{
-	margin:10px auto;
+	.block-related{
+		margin:10px auto;
 
-	.block-content{
-		ol{
-			li{
-				width:45%;
-				margin-bottom:20px;				
+		.block-content{
+			ol{
+				li{
+					width:45%;
+					margin-bottom:20px;				
+				}
 			}
 		}
 	}
-}
 
-#product-info-wrapper{
-	.product-shop{
-		#product-addtocart-button{
-			width:100%;
-			padding:10px 0px;			
+	#product-info-wrapper{
+		.product-shop{
+			#product-addtocart-button{
+				width:100%;
+				padding:10px 0px;			
+			}
 		}
-	}
 
-	h1{
-		margin: 10px 0px 5px;
-		text-transform: uppercase;
-		font-weight: 500;
-		font-size: 1.25em;
-	}
+		h1{
+			margin: 10px 0px 5px;
+			text-transform: uppercase;
+			font-weight: 500;
+			font-size: 1.25em;
+		}
 
-	.price-box{
+		.price-box{
+			p{
+				padding:0;
+			}
+
+			.special-price{
+				.price{
+					padding-right:10px;
+				}
+			}
+		}
+
 		p{
-			padding:0;
-		}
-
-		.special-price{
-			.price{
-				padding-right:10px;
-			}
+			margin:2px 0px;
 		}
 	}
 
-	p{
-		margin:2px 0px;
+	.product-banner{
+		border:0;
 	}
-}
 
-.product-banner{
-	border:0;
-}
+	.product-name{
+		h1{
+			font-size: 1.25em;
+			font-weight: bold;
+		}
+	}
+
+	.breadcrumbs{
+		margin:20px 0px;
+	}
 
 }
